0.58 2013/01/16
- fixed t/01_load which still tried to test for Net::IMP::HTTP_AddXHeader
0.57 2013/01/15
- removed Net::IMP::HTTP_AddXHeader, it is now as Example::AddXHeader inside
  Net::IMP::HTTP
- Net::IMP::Base::get_interface interprets empty return types as caller
  supports any return type
0.56 2013/01/11
- small fix for Net::IMP::Base::get_interface
0.55 2013/01/10
- new function Net::IMP::IMP_DATA to simplify definition of new data types
- reworked documentation in Net::IMP
- Net::IMP::Base 
  - instead of method interface now methods get_interface and set_interface
  - no internal handling of adaptors, instead set_interface returns new factory
    based on adaptor if necessary for the data type
0.54 2013/01/07
- stream type now -1
- put factory into Net::IMP::Base, arguments for factory are not given directly
  to analyzer anymore but need to be accessed using factory_args
- better documentation, clearer distinction what are global, factory or analyzer
  methods
- support interfaces with dtype/rtype instead of global dtypes/rtypes.
  decision which interface to use inside factory
0.53 2012/12/28
- allow other streaming data types, with number<0.
  support these types inside Cascade
0.52 2012/12/20
- Cascade: allow and ignore (pre)pass for parts of data packets (e.g.
  packetized, not streamed data), as long as it is not followed by a
  replacement for other parts of packet
- update documentation regarding non-stream data
0.51 2012/12/11
- fix Cascade::USED_RTYPES to return dualvar constants for rtypes instead
  of strings
0.50 2012/12/10
- make Cascade data type aware:
  - forward type into parts
  - no concatinating or splitting of buffers unless they are IMP_DATA_STREAM
- fix t/01_load.t
0.49 2012/12/10
- Cascade: save parts, so that analyzer->USED_RTYPES can be queried 
  anytime about the computed rtypes 
- make t/01_load.t depend on Net::Inspect>=0.24 for HTTP_AddXFooHeader
0.48 2012/12/4
- SUPPORTED_DTYPES -> supported_dtypes