@@ -1,3 +1,5 @@
+XXX 2013/01/17
+- Net::IMP::Debug - let re_use DEBUG_RX variable from other lib too
 0.58 2013/01/16
 - fixed t/01_load which still tried to test for Net::IMP::HTTP_AddXHeader
 0.57 2013/01/15
